# TF_vs_Deep

./: README.md
DeepSeaPlusPlus/app/: CMakeLists.txt  build.gradle
DeepSeaPlusPlus/app/src/androidTest/java/com/enterprise/bulletcross/deepsea_test/: ExampleInstrumentedTest.kt
DeepSeaPlusPlus/app/src/main/: AndroidManifest.xml
DeepSeaPlusPlus/app/src/main/cpp/: native-lib.cpp
DeepSeaPlusPlus/app/src/main/cpp/include/deepsea/: math_util.h  network_builder.h  prediction.h  read_write_util.h
DeepSeaPlusPlus/app/src/main/java/com/enterprise/bulletcross/deepsea_test/: MainActivity.kt
DeepSeaPlusPlus/app/src/main/java/com/enterprise/bulletcross/deepsea_test/inference/: predictor.kt
DeepSeaPlusPlus/app/src/main/res/layout/: activity_main.xml
DeepSeaPlusPlus/app/src/main/res/values/: strings.xml
DeepSeaPlusPlus/app/src/test/java/com/enterprise/bulletcross/deepsea_test/: ExampleUnitTest.kt
DeepSeaPlusPlus/gradle/wrapper/: gradle-wrapper.properties
DeepSeaPlusPlus/nd4j-netlib-blas-0.4-rc3.6/: build.gradle
Deep_training/: Makefile  combined_data.csv  main.cpp  test_prog
Deep_training/include/deepsea/: math_util.h  network_builder.h  prediction.h  read_write_util.h
Deep_training/src/: main.cpp  test.cpp
TF/app/: build.gradle
TF/app/src/androidTest/java/com/bulletcross/vishal/tf/: ExampleInstrumentedTest.java
TF/app/src/main/: AndroidManifest.xml
TF/app/src/main/assets/: optimized_model_1.pb
TF/app/src/main/java/com/bulletcross/vishal/tf/: MainActivity.java  MainActivity.kt
TF/app/src/main/java/com/bulletcross/vishal/tf/inference/: predictor.kt
TF/app/src/main/java/com/bulletcross/vishal/tf/views/: DrawModel.kt  DrawRenderer.kt  DrawView.kt  data_drawer.kt  data_recorder.kt
TF/app/src/main/res/layout/: activity_main.xml
TF/app/src/test/java/com/bulletcross/vishal/tf/: ExampleUnitTest.java
TF/gradle/wrapper/: gradle-wrapper.properties
TF_training/: checkpoint  circle.csv  cross.csv  frozen_model_1.pb  model_1.ckpt.data-00000-of-00001  model_1.ckpt.index  model_1.pbtxt  outmodel_checkpoint.chkp.data-00000-of-00001  outmodel_checkpoint.chkp.index  square.csv  train_script.ipynb  triangle.csv
TF_training/.ipynb_checkpoints/: train_script-checkpoint.ipynb
